--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#6650A4</color>
+    <color name="gray">#F5F5F5</color>
+    <color name="gris">#999999</color>
 </resources>
