--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,12 +9,12 @@
             android:title="Accueil" />
 
         <item
-            android:id="@+id/nav_gerer"
+            android:id="@+id/nav_message"
             android:icon="@drawable/nav_message"
             android:title="Message" />
 
         <item
-            android:id="@+id/nav_application"
+            android:id="@+id/nav_envoyer"
             android:icon="@drawable/nav_envoyer"
             android:title="Envoyer un courriel" />
 
