--- a/app/src/main/res/layout/activity_admin_index.xml
+++ b/app/src/main/res/layout/activity_admin_index.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
         app:headerLayout="@layout/header"
-        app:menu="@menu/main_menu"
+        app:menu="@menu/admin_menu"
         android:layout_gravity="start" />
 
     <ScrollView
