--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.15" />
 
     <TextView
-        android:id="@+id/avis"
+        android:id="@+id/avis_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connectez-vous à votre compte"
@@ -47,6 +47,20 @@
         app:layout_constraintTop_toTopOf="@+id/systemeGestion"
         app:layout_constraintVertical_bias="0.2" />
 
+    <TextView
+        android:id="@+id/avis_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="(Administrateur)"
+        android:textSize="16dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/avis_1"
+        app:layout_constraintVertical_bias="0.05" />
+
     <EditText
         android:id="@+id/courriel"
         android:layout_width="0dp"
@@ -58,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/avis"
+        app:layout_constraintTop_toTopOf="@+id/avis_2"
         app:layout_constraintVertical_bias="0.15" />
 
     <EditText
