--- a/app/src/main/res/layout/activity_supprimer.xml
+++ b/app/src/main/res/layout/activity_supprimer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".admin.type.CompteActivity">
+    tools:context=".admin.gerer.EnvoyerActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,25 +19,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/back_white" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/listView_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="10dp"
-            android:entries="@array/Gerer"
-            android:background="@color/gray"
-            />
-
-    </LinearLayout>
 
 </LinearLayout>
-
