--- a/app/src/main/res/layout/activity_user_enregistre.xml
+++ b/app/src/main/res/layout/activity_user_enregistre.xml
@@ -76,6 +76,22 @@
         app:layout_constraintTop_toTopOf="@+id/courriel"
         app:layout_constraintVertical_bias="0.15" />
 
+    <EditText
+        android:id="@+id/confirm_Motdepasse"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:hint="Confirmez le mot de Passe"
+        android:inputType="textEmailAddress"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Motdepasse"
+        app:layout_constraintVertical_bias="0.17" />
+
     <Button
         android:id="@+id/userButton"
         android:layout_width="300dp"
@@ -85,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Motdepasse"
+        app:layout_constraintTop_toBottomOf="@+id/confirm_Motdepasse"
         app:layout_constraintVertical_bias="0.2" />
 
     <TextView
